--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,900,900italic,700italic,400italic);
+@import url(//fonts.googleapis.com/css?family=Lato:400,700,900,900italic,700italic,400italic);
 @import url(normalize.css);
 @import url(reset.css);
 @import url(amazium.css);
